...

  /// Beranda
  static const String berandaAssalamualaikum = 'Assalamualaikum';
  static const String berandaSelengkapnya = 'Selengkapnya';
  static const String berandaNoRekeningUtama = 'No.Rekening utama';
  static const String berandaSaldo = 'Saldo';
  static const String berandaMutasiSelengkapnya = 'Mutasi Selengkapnya';

  /// MutasiBeranda
  static const String mutasiBerandaTitle = 'Mutasi';
  static const String mutasiBerandaTabunganSimpati = 'Tabungan Simpati';
  static const String mutasiBerandaInformasiRekening = 'Informasi Rekening';

  /// Layanan
  static const String layananTitle = 'Layanan';

  /// rekening
...
